[package]
name = "arsan"
version = "0.1.0"
authors = ["Wadii Hajji <wadii@cardiologs.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "*", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "*"
